--- a/index.html
+++ b/index.html
@@ -4,8 +4,31 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Luckiest+Guy&family=Space+Grotesk&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="reset.css" />
+    <link rel="stylesheet" href="style.css" />  
+<script src="script.js" defer ></script>
   </head>
   <body>
-    <h2>Hello testing testing</h2>
+    <section class="page-interaction">
+         <button id="play-pause-button">
+            <img id="play-pause-img"
+            src="https://img.icons8.com/ios-glyphs/30/play--v2.png"
+            alt="Play Button"
+            width="50"
+            height="50"/>
+         </button>
+    </section>
+    <section class="set-timer">
+        <button id="timer">Set Time</button>
+    </section>
+    <div class="picture">
+        <img src="" >
+    </div>
   </body>
 </html>
