--- a/index.html
+++ b/index.html
@@ -28,7 +28,10 @@
         <button id="timer">Set Time</button>
     </section>
     <div class="picture">
-        <img src="" >
+        <img src="images/sounds/simon-berger-twukN12EN7c-unsplash.jpg">
+    </div>
+    <div class="sound">
+        <audio src="images/sounds/chill sound.mp3"></audio>
     </div>
   </body>
 </html>
