--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
             height="50"/>
          </button>
     </section>
-    <section class="set-timer">
-        <button id="timer">Set Time</button>
+    <!-- <section class="set-timer">
+        <button id="timer">Set Time</button> -->
     </section>
     <div class="picture">
         <img src="images/sounds/simon-berger-twukN12EN7c-unsplash.jpg">
